@startuml Klassendiagramm_Final_mit_User

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classBackgroundColor #F7F7F7
skinparam classBorderColor #888888
skinparam arrowColor #555555
skinparam packageBackgroundColor #EFEFEF
skinparam packageBorderColor #AAAAAA

package "Präsentationsschicht (Browser / NiceGUI Engine)" #E8F4FD {
  note "Thin Client\nKeine eigenen Klassen\n(Vue.js + Quasar via NiceGUI)" as N1
}

package "Anwendungslogik (Server-seitiges Frontend)" #EAF7EA {

  class User {
    - id : int
    - firstname : str
    - lastname : str
    - email : str
    - password : str
    --
    + hash_password(plain_password : str) : str
    + check_password(plain_password : str) : bool
  }

  class TodoList {
    - id : int
    - name : str
    - owner_id : int
    - todos : list[Todo]
    --
    + add_todo(todo : Todo) : void
    + remove_todo(todo_id : int) : void
    + get_all_todos() : list[Todo]
    + filter_todos(status : str, priority : str) : list[Todo]
  }

  class Todo {
    - id : int
    - description : str
    - priority : str
    - due_date : str
    - status : str
    - created_at : datetime
    - todo_list_id : int
    --
    + toggle_status() : void
    + is_overdue() : bool
  }

  User *-- "0..*" TodoList : besitzt
  TodoList *-- "0..*" Todo : enthält

}

package "Persistenzschicht (SQLite via SQLAlchemy ORM)" #FEF9E7 {

  class UserHandler {
    - session : sqlalchemy.orm.Session
    --
    + save(user : User) : void
    + delete(user_id : int) : void
    + get_by_id(user_id : int) : User
    + get_all() : list[User]
    + update(user_id : int) : void
    + get_by_email(email : str) : User
  }

  class TodoListHandler {
    - session : sqlalchemy.orm.Session
    --
    + save(todolist : TodoList) : void
    + delete(todolist_id : int) : void
    + get_by_id(todolist_id : int) : TodoList
    + get_all() : list[TodoList]
    + update(todolist_id : int) : void
    + get_lists_for_user(user_id : int) : list[TodoList]
    + create_list(user_id : int, name : str) : void
  }

  class TodoHandler {
    - session : sqlalchemy.orm.Session
    --
    + save(todo : Todo) : void
    + delete(todo_id : int) : void
    + get_by_id(todo_id : int) : Todo
    + get_all() : list[Todo]
    + update(todo_id : int, description : str, priority : str, due_date : str) : void
    + get_todos_for_list(todolist_id : int, status_filter : str, priority_filter : str) : list[Todo]
    + toggle_status(todo_id : int) : void
  }

}

UserHandler ..> User : verwaltet
TodoListHandler ..> TodoList : verwaltet
TodoHandler ..> Todo : verwaltet

@enduml
